fix: text colour and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,12 @@
 }
 
 @layer utilities {
+	.prose {
+		@apply text-pink-950/80;
+	}
+
 	.prose :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
-		@apply text-pink-950/80 text-justify mt-0 mb-6;
+		@apply text-justify mt-0 mb-6;
 	}
 
 	.prose :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
